# StereotacticFrame

./: README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: publish-package.yml  python-package.yml  test-package.yml
src/StereotacticFrame/: blob.py  blob_detection.py  frame.py  preprocessor.py  slice_provider.py
src/stereotacticframe/: frame_detector.py
stereotacticframe/: blob_detection.py  cli.py  frame_detector.py
tests/: test_blob_detection.py  test_frame.py  test_preprocessor.py  test_slice_provider.py
