[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StereotacticFrame"
version = "0.1"
authors = [
  { name="Dirk W.M. Loeffen", email="dirk.loeffen@radboudumc.nl" },
]
description = "A python package to allign CT and MR images according to a stereotactic frame"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SFNNijmegen/StereotacticFrame"
"Bug Tracker" = "https://github.com/SFNNijmegen/StereotacticFrame/issues"